# Serve.md

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/core/: CMakeLists.txt
source/core/inc/servemd/core/: server.hpp
source/core/src/: server.cpp
